# Churn-rate-binary-trees

./: churn_model.ipynb  main.py  pyproject.toml
